<resources>
    <string name="AUTH_LAUNCHER3_SETTINGS">com.app.hider.master.promax.provider.launcher3.settings</string>
    <string name="WITH_VAULT">true</string>
    <string name="abandoned_clean_this">Remove</string>
    <string name="abandoned_promise_explanation">The app for this icon isn\'t installed. You can remove it, or search for the app and install it manually.</string>
    <string name="abandoned_promises_title">This app is not installed</string>
    <string name="abandoned_search">Search</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="accounts_add_action">Add account</string>
    <string name="accounts_add_desc">Choose the account type and which copy it lands in</string>
    <string name="accounts_add_head">ACCOUNT TYPES IN %1$s</string>
    <string name="accounts_add_head_first">ACCOUNT TYPES · VUSER 0</string>
    <string name="accounts_add_no_ui">That account type did not offer a sign-in screen.</string>
    <string name="accounts_add_none_desc">No app in this container offers an account type. Import Google Play services, or an app that signs in, first.</string>
    <string name="accounts_add_none_title">Nothing can add an account here</string>
    <string name="accounts_add_opening">Opening %1$s inside the container…</string>
    <string name="accounts_add_title">Add account</string>
    <string name="accounts_app_hidden">hidden by you</string>
    <string name="accounts_app_visible">visible</string>
    <string name="action_delete_all_bookmarks">Delete all bookmarks</string>
    <string name="adblock_category">Ad block</string>
    <string name="adblock_summary">Ad block...</string>
    <string name="adguard_ad_server_list">AdGuard DNS filter</string>
    <string name="agent">User agent</string>
    <string name="android_open_source_project">Android Open Source Project</string>
    <string name="apache">Apache License 2.0</string>
    <string name="app_elements">App elements</string>
    <string name="app_lightning">Lightning</string>
    <string name="app_lock">Set app password</string>
    <string name="app_name">App Hider</string>
    <string name="backup_bookmarks">Bookmarks backup</string>
    <string name="backup_settings">Settings backup</string>
    <string name="backup_tabs">Tabs backup</string>
    <string name="block">Block images</string>
    <string name="block_ad_refresh_now">Refresh hosts now</string>
    <string name="block_ad_remote_refresh_frequency_description">For remote hosts file</string>
    <string name="block_ad_source">Hosts file source</string>
    <string name="block_ads">Block ads and trackers</string>
    <string name="block_intent">Handle all clicked links within this browser</string>
    <string name="block_intent_summary">Blocks prompt to open links in external applications</string>
    <string name="block_javascript">Block JavaScript for site</string>
    <string name="block_malware">Block malicious sites</string>
    <string name="block_source_default">Default hosts</string>
    <string name="bottom_navbar">Move the navbar to the bottom</string>
    <string name="cache">Clear cache on exit</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_cookies">Clear browser cookies</string>
    <string name="clear_cookies_exit">Clear cookies on exit</string>
    <string name="clear_history">Clear browser history</string>
    <string name="clear_history_exit">Clear history on exit</string>
    <string name="clear_settings">Reset settings</string>
    <string name="clear_web_storage">Clear web storage</string>
    <string name="clear_web_storage_exit">Clear web storage on exit</string>
    <string name="close_on_last_tab">Close browser with last tab</string>
    <string name="color_mode">Enable color mode</string>
    <string name="cookie_category">Cookie dialog block</string>
    <string name="cookies">Enable cookies</string>
    <string name="crash_warning">Enabling this setting with \'Allow sites to open new windows\' on may cause crashes</string>
    <string name="customize">Customization settings</string>
    <string name="do_not_track">Request \'Do Not Track\'</string>
    <string name="download">Download location</string>
    <string name="drawer_settings">Drawer settings</string>
    <string name="enable_in_settings">AutoFill needs to be set up in Android settings for this option to take effect</string>
    <string name="export_bookmarks">Export bookmarks to backup</string>
    <string name="export_settings">Export settings to backup</string>
    <string name="export_tabs">Export tabs to backup</string>
    <string name="extensions">Extensions</string>
    <string name="extensions_description">Download extensions...</string>
    <string name="faq">FAQ</string>
    <string name="faq_description">Frequently asked questions...</string>
    <string name="force_zoom">Override website zoom block</string>
    <string name="forcehttps">Block non-HTTPS sites</string>
    <string name="forcehttpsdesc">Only load HTTPS sites</string>
    <string name="fullScreenOption">Hide status bar while browsing</string>
    <string name="fullscreen">Hide URL bar while scrolling</string>
    <string name="homepage_settings">Homepage settings</string>
    <string name="http_proxy">HTTP proxy</string>
    <string name="import_backup">Import bookmarks from backup</string>
    <string name="import_export">Import and export settings</string>
    <string name="import_settings">Import settings from backup</string>
    <string name="incognito_cookies">Enable cookies in private tabs</string>
    <string name="java">Enable JavaScript</string>
    <string name="jsoup">jsoup: Java HTML Parser</string>
    <string name="legacy_download_manager">Use integrated download manager</string>
    <string name="legacy_download_manager_desc">Download files using the SmartCookieWeb download manager, instead of the system one</string>
    <string name="library_netcipher">NetCipher</string>
    <string name="license_gnu">GNU Lesser General Public License</string>
    <string name="license_gnu_gpl">GNU General Public License</string>
    <string name="licenses">Open Source Licenses</string>
    <string name="load_tabs">Load all tabs when browser is started</string>
    <string name="location">Location access</string>
    <string name="mit_license">MIT License</string>
    <string name="more">More Info</string>
    <string name="mpl_license">Mozilla Public License 2.0</string>
    <string name="new_tab_foreground">Bring tabs to foreground</string>
    <string name="new_tab_foreground_summary">Open a new tab when it is created</string>
    <string name="news_endpoint">News endpoint</string>
    <string name="only_clear">Only clear on browser session end</string>
    <string name="only_clear_summary">Only clear above options when all browser tabs have been closed, instead of whenever the app is exited</string>
    <string name="overViewMode">Load pages in overview mode</string>
    <string name="parental_controls">Parental controls settings</string>
    <string name="password">Save your passwords</string>
    <string name="preferhttps">Prefer HTTPS site versions</string>
    <string name="preferhttpsdesc">Always use HTTPS on supported sites</string>
    <string name="privacy_set">Privacy settings</string>
    <string name="recommended">Recommended</string>
    <string name="reflow">Enable text reflow</string>
    <string name="remove_identifying_headers">Remove identifying HTTP headers</string>
    <string name="rendering_mode">Rendering mode</string>
    <string name="restore">Restore tabs on start</string>
    <string name="save_data">Request \'Save-Data\'</string>
    <string name="search">Search engine</string>
    <string name="search_suggestions">Search suggestions</string>
    <string name="security_set">Security settings</string>
    <string name="settings_about">About</string>
    <string name="settings_about_explain">Version number, author and licenses…</string>
    <string name="settings_adblock">Content block settings</string>
    <string name="settings_advanced">Advanced settings</string>
    <string name="settings_advanced_explain">URL box contents, rendering mode, text encoding…</string>
    <string name="settings_bookmark_explain">Exporting and importing…</string>
    <string name="settings_display">Display settings</string>
    <string name="settings_display_explain">Full screen mode, homepage, themes…</string>
    <string name="settings_general">General settings</string>
    <string name="settings_general_explain">Search engine, proxy, color mode…</string>
    <string name="settings_parents">Block sites, set password...</string>
    <string name="settings_privacy">Privacy and security settings</string>
    <string name="settings_privacy_explain">Cache, cookies, history…</string>
    <string name="show_second_bar">Show secondary navigation bar</string>
    <string name="show_ssl">Show SSL warning dialogs</string>
    <string name="snacktory">Snacktory</string>
    <string name="start_incognito">Always act like private mode</string>
    <string name="suggest">Choose number of search suggestions</string>
    <string name="text_encoding">Text encoding</string>
    <string name="theme_settings">Theme settings</string>
    <string name="third_party">Block 3rd party cookies</string>
    <string name="title_text_size">Text size</string>
    <string name="translation_endpoint">Translation endpoint</string>
    <string name="url_contents">URL box contents</string>
    <string name="url_project">https://github.com/CookieJarApps/SmartCookieWeb</string>
    <string name="version">Application version</string>
    <string name="warn">Only change this if you know what you\'re doing!</string>
    <string name="webrtc_description">Allow websites to request access to the microphone and camera</string>
    <string name="webrtc_support">Allow WebRTC permission requests</string>
    <string name="webview_devtools">WebView DevTools</string>
    <string name="webview_version">WebView version</string>
    <string name="wideViewPort">Use wide viewport</string>
    <string name="window">Allow sites to open new windows</string>
</resources>