<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/privacy_set">
        <SwitchPreference
            android:title="@string/location"
            android:key="location"
            android:defaultValue="true"
            android:singleLineTitle="false"/>
        <SwitchPreference
            android:title="@string/third_party"
            android:key="third_party"
            android:defaultValue="false"
            android:singleLineTitle="false"/>
        <SwitchPreference
            android:title="@string/password"
            android:key="password"
            android:summary="@string/enable_in_settings"
            android:defaultValue="true"
            android:singleLineTitle="false"/>
        <SwitchPreference
            android:title="@string/do_not_track"
            android:key="do_not_track"
            android:defaultValue="false"
            android:singleLineTitle="false"/>
        <SwitchPreference
            android:title="@string/remove_identifying_headers"
            android:key="remove_identifying_headers"
            android:defaultValue="false"
            android:singleLineTitle="false"/>
        <SwitchPreference
            android:title="@string/webrtc_support"
            android:key="webrtc_support"
            android:summary="@string/webrtc_description"
            android:defaultValue="false"
            android:singleLineTitle="false"/>
        <SwitchPreference
            android:title="@string/start_incognito"
            android:key="start_incognito"
            android:defaultValue="false"
            android:singleLineTitle="false"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/security_set"/>
    <SwitchPreference
        android:title="@string/preferhttps"
        android:key="prefer_https"
        android:summary="@string/preferhttpsdesc"
        android:defaultValue="false"
        android:singleLineTitle="false"/>
    <SwitchPreference
        android:title="@string/forcehttps"
        android:key="force_https"
        android:summary="@string/forcehttpsdesc"
        android:defaultValue="false"
        android:singleLineTitle="false"/>
    <SwitchPreference
        android:title="@string/block_malware"
        android:key="block_malicious_sites"
        android:defaultValue="true"
        android:singleLineTitle="false"/>
    <SwitchPreference
        android:title="@string/cache"
        android:key="clear_cache_exit"
        android:defaultValue="false"
        android:singleLineTitle="false"/>
    <SwitchPreference
        android:title="@string/clear_history_exit"
        android:key="clear_history_exit"
        android:defaultValue="false"
        android:singleLineTitle="false"/>
    <SwitchPreference
        android:title="@string/clear_cookies_exit"
        android:key="clear_cookies_exit"
        android:defaultValue="false"
        android:singleLineTitle="false"/>
    <SwitchPreference
        android:title="@string/clear_web_storage_exit"
        android:key="clear_webstorage_exit"
        android:defaultValue="false"
        android:singleLineTitle="false"/>
    <SwitchPreference
        android:title="@string/only_clear"
        android:key="only_clear"
        android:summary="@string/only_clear_summary"
        android:defaultValue="true"
        android:singleLineTitle="false"/>
    <Preference
        android:title="@string/app_lock"
        android:key="app_lock"
        android:singleLineTitle="false"/>
    <Preference
        android:title="@string/clear_cache"
        android:key="clear_cache"
        android:singleLineTitle="false"/>
    <Preference
        android:title="@string/clear_history"
        android:key="clear_history"
        android:singleLineTitle="false"/>
    <Preference
        android:title="@string/clear_cookies"
        android:key="clear_cookies"
        android:singleLineTitle="false"/>
    <Preference
        android:title="@string/clear_web_storage"
        android:key="clear_webstorage"
        android:singleLineTitle="false"/>
</PreferenceScreen>
