<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_advanced">
        <SwitchPreference
            android:title="@string/window"
            android:key="allow_new_window"
            android:summary="@string/recommended"
            android:defaultValue="true"
            android:singleLineTitle="false"/>
        <SwitchPreference
            android:title="@string/block_intent"
            android:key="block_intent"
            android:summary="@string/block_intent_summary"
            android:defaultValue="false"
            android:singleLineTitle="false"/>
        <SwitchPreference
            android:title="@string/cookies"
            android:key="allow_cookies"
            android:summary="@string/recommended"
            android:defaultValue="true"
            android:singleLineTitle="false"/>
        <SwitchPreference
            android:title="@string/incognito_cookies"
            android:key="incognito_cookies"
            android:defaultValue="false"
            android:singleLineTitle="false"/>
        <SwitchPreference
            android:title="@string/restore"
            android:key="restore_tabs"
            android:defaultValue="true"
            android:singleLineTitle="false"/>
        <SwitchPreference
            android:title="@string/legacy_download_manager"
            android:key="downloader"
            android:summary="@string/legacy_download_manager_desc"
            android:defaultValue="true"
            android:singleLineTitle="false"/>
        <SwitchPreference
            android:title="@string/show_ssl"
            android:key="show_ssl"
            android:summary="@string/warn"
            android:defaultValue="true"
            android:singleLineTitle="false"/>
        <Preference
            android:title="@string/webview_devtools"
            android:key="webview_devtools">
            <intent android:action="com.android.webview.SHOW_DEV_UI">
                <extra
                    android:name="SOURCE"
                    android:value="SELF"/>
            </intent>
        </Preference>
        <Preference
            android:title="@string/text_encoding"
            android:key="text_encoding"
            android:singleLineTitle="false"/>
        <Preference
            android:title="@string/rendering_mode"
            android:key="rendering_mode"
            android:singleLineTitle="false"/>
        <Preference
            android:title="@string/url_contents"
            android:key="url_contents"
            android:singleLineTitle="false"/>
        <Preference
            android:title="@string/translation_endpoint"
            android:key="translation_endpoint"
            android:singleLineTitle="false"/>
        <Preference
            android:title="@string/news_endpoint"
            android:key="news_endpoint"
            android:singleLineTitle="false"/>
    </PreferenceCategory>
</PreferenceScreen>
