<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_general">
        <SwitchPreference
            android:title="@string/block"
            android:key="cb_images"
            android:defaultValue="false"
            android:singleLineTitle="false"/>
        <SwitchPreference
            android:title="@string/save_data"
            android:key="savedata"
            android:summary="@string/crash_warning"
            android:defaultValue="false"
            android:singleLineTitle="false"/>
        <SwitchPreference
            android:title="@string/load_tabs"
            android:key="load_tabs"
            android:defaultValue="false"
            android:singleLineTitle="false"/>
        <SwitchPreference
            android:title="@string/color_mode"
            android:key="cb_colormode"
            android:defaultValue="false"
            android:singleLineTitle="false"/>
        <SwitchPreference
            android:title="@string/force_zoom"
            android:key="force_zoom"
            android:defaultValue="false"
            android:singleLineTitle="false"/>
        <SwitchPreference
            android:title="@string/close_on_last_tab"
            android:key="last_tab"
            android:defaultValue="true"
            android:singleLineTitle="false"/>
        <SwitchPreference
            android:title="@string/java"
            android:key="cb_javascript"
            android:defaultValue="true"
            android:singleLineTitle="false"/>
        <Preference
            android:title="@string/block_javascript"
            android:key="block_javascript"
            android:singleLineTitle="false"/>
        <Preference
            android:title="@string/http_proxy"
            android:key="proxy"
            android:singleLineTitle="false"/>
        <Preference
            android:title="@string/agent"
            android:key="agent"
            android:singleLineTitle="false"/>
        <Preference
            android:title="@string/download"
            android:key="download"
            android:singleLineTitle="false"/>
        <Preference
            android:title="@string/search"
            android:key="search"
            android:singleLineTitle="false"/>
        <Preference
            android:title="@string/search_suggestions"
            android:key="suggestions_choice"
            android:singleLineTitle="false"/>
        <Preference
            android:title="@string/suggest"
            android:key="suggestions_number"
            android:singleLineTitle="false"/>
    </PreferenceCategory>
</PreferenceScreen>
