<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.preference.Preference
        android:icon="@drawable/ic_settings_general_layers"
        android:tint="#8e4f00"
        android:title="@string/settings_general"
        android:summary="@string/settings_general_explain"
        android:fragment="com.cookiegames.smartcookie.settings.fragment.GeneralSettingsFragment"
        android:singleLineTitle="false"/>
    <androidx.preference.Preference
        android:icon="@drawable/ic_settings_import_export_layers"
        android:title="@string/import_export"
        android:summary="@string/settings_bookmark_explain"
        android:fragment="com.cookiegames.smartcookie.settings.fragment.ExportSettingsFragment"
        android:singleLineTitle="false"/>
    <androidx.preference.Preference
        android:icon="@drawable/ic_settings_customize_layers"
        android:tint="#8e4f00"
        android:title="@string/customize"
        android:summary="@string/settings_display_explain"
        android:fragment="com.cookiegames.smartcookie.settings.fragment.DisplaySettingsFragment"
        android:singleLineTitle="false"/>
    <androidx.preference.Preference
        android:icon="@drawable/ic_settings_shield_layers"
        android:title="@string/settings_privacy"
        android:summary="@string/settings_privacy_explain"
        android:fragment="com.cookiegames.smartcookie.settings.fragment.PrivacySettingsFragment"
        android:singleLineTitle="false"/>
    <androidx.preference.Preference
        android:icon="@drawable/ic_settings_advanced_layers"
        android:title="@string/settings_advanced"
        android:summary="@string/settings_advanced_explain"
        android:fragment="com.cookiegames.smartcookie.settings.fragment.AdvancedSettingsFragment"
        android:singleLineTitle="false"/>
    <androidx.preference.Preference
        android:icon="@drawable/ic_settings_block_layers"
        android:title="@string/settings_adblock"
        android:summary="@string/adblock_summary"
        android:fragment="com.cookiegames.smartcookie.settings.fragment.AdBlockSettingsFragment"
        android:singleLineTitle="false"/>
    <androidx.preference.Preference
        android:icon="@drawable/ic_settings_parental_controls_layers"
        android:title="@string/parental_controls"
        android:summary="@string/settings_parents"
        android:fragment="com.cookiegames.smartcookie.settings.fragment.ParentalControlSettingsFragment"
        android:singleLineTitle="false"/>
    <androidx.preference.Preference
        android:icon="@drawable/ic_settings_extensions_layers"
        android:title="@string/extensions"
        android:summary="@string/extensions_description"
        android:fragment="com.cookiegames.smartcookie.settings.fragment.ExtensionsSettingsFragment"
        android:singleLineTitle="false"/>
    <androidx.preference.Preference
        android:icon="@drawable/ic_settings_about_layers"
        android:title="@string/settings_about"
        android:summary="@string/settings_about_explain"
        android:fragment="com.cookiegames.smartcookie.settings.fragment.AboutSettingsFragment"
        android:singleLineTitle="false"/>
    <androidx.preference.Preference
        android:icon="@drawable/ic_settings_faq_layers"
        android:title="@string/faq"
        android:summary="@string/faq_description"
        android:singleLineTitle="false">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="">
            <extra
                android:name="SOURCE"
                android:value="SELF"/>
        </intent>
    </androidx.preference.Preference>
</androidx.preference.PreferenceScreen>
