<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/backup_bookmarks">
        <Preference
            android:title="@string/export_bookmarks"
            android:key="export_bookmark"
            android:singleLineTitle="false"/>
        <Preference
            android:title="@string/import_backup"
            android:key="import_bookmark"
            android:singleLineTitle="false"/>
        <Preference
            android:title="@string/action_delete_all_bookmarks"
            android:key="delete_bookmarks"
            android:singleLineTitle="false"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/backup_tabs">
        <Preference
            android:title="@string/export_tabs"
            android:key="export_tab"
            android:singleLineTitle="false"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/backup_settings">
        <Preference
            android:title="@string/export_settings"
            android:key="export_settings"
            android:singleLineTitle="false"/>
        <Preference
            android:title="@string/import_settings"
            android:key="import_settings"
            android:singleLineTitle="false"/>
        <Preference
            android:title="@string/clear_settings"
            android:key="clear_settings"
            android:singleLineTitle="false"/>
    </PreferenceCategory>
</PreferenceScreen>
