<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/app_elements">
        <androidx.preference.Preference
            android:icon="@drawable/ic_settings_theme_layers"
            android:title="@string/theme_settings"
            android:fragment="com.cookiegames.smartcookie.settings.fragment.ThemeSettingsFragment"
            android:singleLineTitle="false"/>
        <androidx.preference.Preference
            android:icon="@drawable/ic_settings_homepage_layers"
            android:title="@string/homepage_settings"
            android:fragment="com.cookiegames.smartcookie.settings.fragment.HomepageSettingsFragment"
            android:singleLineTitle="false"/>
        <androidx.preference.Preference
            android:icon="@drawable/ic_settings_drawers_layers"
            android:title="@string/drawer_settings"
            android:fragment="com.cookiegames.smartcookie.settings.fragment.DrawerSettingsFragment"
            android:singleLineTitle="false"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_display">
        <SwitchPreference
            android:title="@string/show_second_bar"
            android:key="second_bar"
            android:defaultValue="false"
            android:singleLineTitle="false"/>
        <SwitchPreference
            android:title="@string/fullScreenOption"
            android:key="fullScreenOption"
            android:defaultValue="false"
            android:singleLineTitle="false"/>
        <SwitchPreference
            android:title="@string/fullscreen"
            android:key="fullscreen"
            android:defaultValue="false"
            android:singleLineTitle="false"/>
        <SwitchPreference
            android:title="@string/bottom_navbar"
            android:key="bottom_bar"
            android:defaultValue="false"
            android:singleLineTitle="false"/>
        <SwitchPreference
            android:title="@string/wideViewPort"
            android:key="wideViewPort"
            android:summary="@string/recommended"
            android:defaultValue="true"
            android:singleLineTitle="false"/>
        <SwitchPreference
            android:title="@string/overViewMode"
            android:key="overViewMode"
            android:summary="@string/recommended"
            android:defaultValue="true"
            android:singleLineTitle="false"/>
        <SwitchPreference
            android:title="@string/reflow"
            android:key="text_reflow"
            android:defaultValue="false"
            android:singleLineTitle="false"/>
        <SwitchPreference
            android:title="@string/new_tab_foreground"
            android:key="new_tabs_foreground"
            android:summary="@string/new_tab_foreground_summary"
            android:defaultValue="true"
            android:singleLineTitle="false"/>
        <Preference
            android:title="@string/title_text_size"
            android:key="text_size"
            android:singleLineTitle="false"/>
    </PreferenceCategory>
</PreferenceScreen>
