<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_about">
        <Preference
            android:title="@string/more"
            android:summary="@string/url_project">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/CookieJarApps/SmartCookieWeb">
                <extra
                    android:name="SOURCE"
                    android:value="SELF"/>
            </intent>
        </Preference>
        <Preference
            android:title="@string/version"
            android:key="pref_version"/>
        <Preference
            android:title="@string/webview_version"
            android:key="pref_webview"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/licenses">
        <Preference
            android:title="@string/app_name"
            android:summary="@string/mpl_license">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.mozilla.org/MPL/2.0/">
                <extra
                    android:name="SOURCE"
                    android:value="SELF"/>
            </intent>
        </Preference>
        <Preference
            android:title="@string/app_lightning"
            android:summary="@string/mpl_license">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.mozilla.org/MPL/2.0/">
                <extra
                    android:name="SOURCE"
                    android:value="SELF"/>
            </intent>
        </Preference>
        <Preference
            android:title="@string/android_open_source_project"
            android:summary="@string/apache">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.apache.org/licenses/LICENSE-2.0">
                <extra
                    android:name="SOURCE"
                    android:value="SELF"/>
            </intent>
        </Preference>
        <Preference
            android:title="@string/adguard_ad_server_list"
            android:summary="@string/license_gnu_gpl">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.gnu.org/licenses/gpl-3.0.en.html">
                <extra
                    android:name="SOURCE"
                    android:value="SELF"/>
            </intent>
        </Preference>
        <Preference
            android:title="@string/library_netcipher"
            android:summary="@string/license_gnu">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.gnu.org/licenses/lgpl.html">
                <extra
                    android:name="SOURCE"
                    android:value="SELF"/>
            </intent>
        </Preference>
        <Preference
            android:title="@string/snacktory"
            android:summary="@string/apache">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.apache.org/licenses/LICENSE-2.0">
                <extra
                    android:name="SOURCE"
                    android:value="SELF"/>
            </intent>
        </Preference>
        <Preference
            android:title="@string/jsoup"
            android:summary="@string/mit_license">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://jsoup.org/license">
                <extra
                    android:name="SOURCE"
                    android:value="SELF"/>
            </intent>
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
