<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/block_malware">
        <SwitchPreference
            android:title="@string/block_malware"
            android:key="block_malicious_sites"
            android:defaultValue="false"
            android:singleLineTitle="false"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/cookie_category">
        <SwitchPreference
            android:title="@string/cookie_category"
            android:key="block_cookies"
            android:defaultValue="false"
            android:singleLineTitle="false"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/adblock_category">
        <SwitchPreference
            android:title="@string/block_ads"
            android:key="cb_block_ads"
            android:defaultValue="true"
            android:singleLineTitle="false"/>
        <androidx.preference.Preference
            android:title="@string/block_ad_source"
            android:key="preference_hosts_source"
            android:summary="@string/block_source_default"
            android:singleLineTitle="false"/>
        <androidx.preference.Preference
            android:title="@string/block_ad_refresh_now"
            android:key="preference_hosts_refresh_force"
            android:summary="@string/block_ad_remote_refresh_frequency_description"
            android:singleLineTitle="false"/>
    </PreferenceCategory>
</PreferenceScreen>
